Remove wonky css. Attempt to fix weird bug with 'me' information not showing up.

--- a/src/app/components/tally/tally.less
+++ b/src/app/components/tally/tally.less
@@ -9,17 +9,9 @@
     border-radius: 10px;
     cursor: default;
     margin-right: 15px;
-    /* REGION: Drop-down animation */
-
-    -webkit-transition: max-height 1s;
-    transition: max-height 1s;
-    top: 5px;
     padding-left: 0;
     padding-right: 0;
-    &:hover {
-      max-height: 500px;
-    }
-    /* ENDREGION: Drop-down animation */
+    top: 5px;
     * {
       overflow: hidden;
       text-overflow: '.';
